# SolverSCH

./: .gitignore  CLAUDE.md  LLM_Test_Report.xlsx  README.md  export_all_components_sklib.py  pyproject.toml  rectifier_output.csv  rlc_output.csv  signoff.cir  solver_output.txt  validation_output.txt
.claude/: settings.local.json
Import/: boss_fight_channel.nsx  power_typo_altium.nsx  sensor_interface_altium.nsx  sensor_unrouted_altium.nsx  underdamped_rlc.nsx  unstable_ac.nsx
datasheets/: build_index.py
docs/: solversch_functional_tree.md
ltspice_signoff/: signoff_Diode_Crossval_MNA_vs_LTspice_dc.cir  signoff_RC_LP_Filter_1kHz_(fallback)_ac.cir  signoff_RC_LP_Filter_1kHz_(fallback)_dc.cir  signoff_RC_LP_Filter_1kHz_(fallback)_tran.cir  signoff_RC_Low-Pass_Filter_ac.cir  signoff_RC_Low-Pass_Filter_dc.cir  signoff_RC_Low-Pass_Filter_tran.cir
ltspice_sim/: signoff_Diode_Crossval_Models_dc.cir  signoff_LEM_Conditioner_V2_dc.cir  signoff_MOSFET_Triode_Demo_dc.cir  signoff_MOSFET_Triode_Test_dc.cir
results/: 600V_Detector_Report.xlsx  extra_symbols_v3.txt  extracted_symbols.txt  signoff.cir
scripts/: _analyze_excel.py  _excel_analysis.txt  _excel_dump.txt  add_lesson.py  build_cir.py  check_bom.py  demo_mosfet_triode.py  design_600v_detector.py  design_amp_filter.py  design_lem_conditioner.py  design_lem_conditioner_ai.py  design_signal_conditioner.py  export_all_components.py  generate_filter_sch.pas  live_review_demo.py  manual_ltspice_test.py  test_ac_stability.py  test_altium_integration.py  test_design_review.py  test_design_review_tools.py  test_llm_live.py  use_api_designer.py  verify_llm_readiness.py  verify_opamp_filter.py  verify_opamp_filter_sklib.py  verify_spice_rlc.py
solver_sch/: __init__.py  cli.py  constants.py  registry.py  results.py  (+1 more)
(+84 files in other folders)
