[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solver_sch"
version = "0.1.0"
description = "Autonomous EDA Designer and MNA Solver"
authors = [{name = "The SolverSCH Team"}]
dependencies = [
    "pyvis",
    "networkx",
    "numpy",
    "pytest",
    "google-genai",
    "scipy",
    "plotly"
]

[project.scripts]
solversch = "solver_sch.cli:main"
solversch-chat = "solver_sch.ai.chat:main"

[tool.hatch.build.targets.wheel]
packages = ["solver_sch"]
