[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solver_sch"
version = "0.1.0"
description = "Autonomous EDA Designer and MNA Solver"
authors = [{name = "The SolverSCH Team"}]
dependencies = [
    "pyvis",
    "networkx",
    "numpy",
    "google-genai",
    "scipy",
    "plotly",
    "openpyxl",
    "aiohttp",
    "PyMuPDF",
    "rank_bm25"
]

[project.optional-dependencies]
dev = ["pytest"]
gui = ["PySide6>=6.5", "matplotlib>=3.7"]

[project.scripts]
solversch = "solver_sch.cli:main"

[tool.pytest.ini_options]
markers = [
    "ollama: tests requiring a running Ollama instance (deselect with '-m \"not ollama\"')"
]

[tool.hatch.build.targets.wheel]
packages = ["solver_sch"]
